<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.ui.fragment.CoinHistoryFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                android:id="@+id/tv_date_label"
                style="@style/label_text"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/text"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tv_date_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="21:05:16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_date_label" />

            <TextView
                android:id="@+id/tv_min_label"
                style="@style/label_text"
                android:text="@string/min_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_label" />

            <TextView
                android:id="@+id/tv_min_price"
                style="@style/label_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toEndOf="@id/tv_min_label"
                app:layout_constraintTop_toBottomOf="@id/tv_date_label"
                tools:text="7110.0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_min_label" />

            <TextView
                android:id="@+id/tv_max_label"
                style="@style/label_text"
                android:text="@string/max_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_label" />

            <TextView
                android:id="@+id/tv_max_price"
                style="@style/label_text"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintStart_toEndOf="@id/tv_max_label"
                app:layout_constraintTop_toBottomOf="@id/tv_min_label"
                tools:text="7820.1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_max_label" />

            <TextView
                android:id="@+id/tv_open_label"
                style="@style/label_text"
                android:text="@string/open"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_label" />

            <TextView
                android:id="@+id/tv_open"
                style="@style/label_text"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tv_open_label"
                app:layout_constraintTop_toBottomOf="@id/tv_max_label"
                tools:text="7246.2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_open_label" />

            <TextView
                android:id="@+id/tv_close_label"
                style="@style/label_text"
                android:text="@string/close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_open_label" />

            <TextView
                android:id="@+id/tv_close"
                style="@style/label_text"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tv_close_label"
                app:layout_constraintTop_toBottomOf="@id/tv_open_label"
                tools:text="7352.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

