<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.fragment.CoinDetailFragment">

    <ImageView
        android:id="@+id/iv_logo_coin"
        android:layout_width="@dimen/size_logo_coin_80"
        android:layout_height="@dimen/size_logo_coin_80"
        android:layout_margin="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_from_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/font_symbol"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash"
        app:layout_constraintEnd_toStartOf="@id/tv_slash"
        app:layout_constraintTop_toTopOf="@id/tv_slash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tv_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small_8"
        android:text="@string/slash"
        android:textSize="@dimen/font_symbol"
        app:layout_constraintEnd_toEndOf="@id/iv_logo_coin"
        app:layout_constraintStart_toStartOf="@id/iv_logo_coin"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_coin" />

    <TextView
        android:id="@+id/tv_to_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/font_symbol"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash"
        app:layout_constraintStart_toEndOf="@id/tv_slash"
        app:layout_constraintTop_toTopOf="@id/tv_slash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_slash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                android:id="@+id/tv_price_label"
                style="@style/label_text"
                android:text="@string/price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/text"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tv_price_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7352.5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

            <TextView
                android:id="@+id/tv_min_price_label"
                style="@style/label_text"
                android:text="@string/min_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

            <TextView
                android:id="@+id/tv_min_price"
                style="@style/text"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toEndOf="@id/tv_min_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label"
                tools:text="7110.0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

            <TextView
                android:id="@+id/tv_max_price_label"
                style="@style/label_text"
                android:text="@string/max_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

            <TextView
                android:id="@+id/tv_max_price"
                style="@style/text"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label"
                tools:text="7820.1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

            <TextView
                android:id="@+id/tv_last_market_label"
                style="@style/label_text"
                android:text="@string/last_trade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

            <TextView
                android:id="@+id/tv_last_market"
                style="@style/text"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label"
                tools:text="Bitfinex" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_last_market_label" />

            <TextView
                android:id="@+id/tv_last_update"
                style="@style/label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_market_label"
                tools:text="Час останнього оновлення: 21:52:33" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

