<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/spacing_normal_16">

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8"
            android:text="@string/price_label"
            android:textColor="#000"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toEndOf="@id/tv_price_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="7352.5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

        <TextView
            android:id="@+id/tv_min_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8"
            android:text="@string/min_price"
            android:textColor="#000"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

        <TextView
            android:id="@+id/tv_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toEndOf="@id/tv_min_price_label"
            app:layout_constraintTop_toBottomOf="@id/tv_price_label"
            tools:text="7110.0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

        <TextView
            android:id="@+id/tv_max_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8"
            android:text="@string/max_price"
            android:textColor="#000"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

        <TextView
            android:id="@+id/tv_max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
            app:layout_constraintTop_toBottomOf="@id/tv_min_price_label"
            tools:text="7820.1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

        <TextView
            android:id="@+id/tv_last_market_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8"
            android:text="@string/last_trade"
            android:textColor="#000"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

        <TextView
            android:id="@+id/tv_last_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
            app:layout_constraintTop_toBottomOf="@id/tv_max_price_label"
            tools:text="Bitfinex" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_last_market_label" />

        <TextView
            android:id="@+id/tv_last_update_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8"
            android:text="@string/last_update"
            android:textColor="#000"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_last_market_label" />

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toEndOf="@id/tv_last_update_label"
            app:layout_constraintTop_toBottomOf="@id/tv_last_market_label"
            tools:text="21:05:16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>